--- a/index.html
+++ b/index.html
@@ -1749,15 +1749,22 @@
 
                     <label for="model-name">モデル名:</label>
                     <select id="model-name" aria-label="モデル名">
-                        <optgroup label="無料">
-                            <option value="gemini-2.0-flash">gemini-2.0-flash</option>
-                            <option value="gemini-2.5-flash-preview-04-17">gemini-2.5-flash-preview-04-17</option>
-                            <option value="gemini-2.5-flash-preview-05-20">gemini-2.5-flash-preview-05-20</option>
-                            <option value="gemini-2.5-pro-exp-03-25">gemini-2.5-pro-exp-03-25</option>
+                        <optgroup label="Gemini 3 (Preview)">
+                            <option value="gemini-3-pro">gemini-3-pro</option>
+                            <option value="gemini-3-flash">gemini-3-flash</option>
                         </optgroup>
-                        <optgroup label="有料">
-                            <option value="gemini-2.5-pro-preview-03-25">gemini-2.5-pro-preview-03-25</option>
+                        <optgroup label="Gemini 2.5">
+                            <option value="gemini-2.5-pro">gemini-2.5-pro</option>
+                            <option value="gemini-2.5-flash">gemini-2.5-flash</option>
+                            <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>
+                        </optgroup>
+                        <optgroup label="Gemini 2.0 (Stable)">
+                            <option value="gemini-2.0-pro">gemini-2.0-pro</option>
+                            <option value="gemini-2.0-flash" selected>gemini-2.0-flash</option>
+                        </optgroup>
+                        <optgroup label="Legacy Models">
                             <option value="gemini-2.5-pro-preview-05-06">gemini-2.5-pro-preview-05-06</option>
+                            <option value="gemini-2.5-flash-preview-05-20">gemini-2.5-flash-preview-05-20</option>
                         </optgroup>
                         <optgroup label="ユーザー指定" id="user-defined-models-group">
                             <!-- 追加モデルはここにJSで挿入される -->
