--- a/index.html
+++ b/index.html
@@ -1749,6 +1749,10 @@
 
                     <label for="model-name">モデル名:</label>
                     <select id="model-name" aria-label="モデル名">
+                        <optgroup label="Gemini 3.1">
+                            <option value="gemini-3.1-pro">gemini-3.1-pro</option>
+                            <option value="gemini-3.1-flash">gemini-3.1-flash</option>
+                        </optgroup>
                         <optgroup label="Gemini 3 (Preview)">
                             <option value="gemini-3-pro">gemini-3-pro</option>
                             <option value="gemini-3-flash">gemini-3-flash</option>
