フォルダごとアップする機能実装

--- a/index.html
+++ b/index.html
@@ -2016,7 +2016,7 @@
         <h3 style="margin-top:0; margin-bottom:15px;">コンテキストキャッシュ新規作成</h3>
         
         <div class="file-upload-area" style="text-align: left; margin-bottom: 5px;">
-            <input type="file" id="cache-file-input" multiple accept=".txt,text/plain" class="hidden">
+            <input type="file" id="cache-file-input" multiple webkitdirectory class="hidden">
             <button id="select-cache-files-btn" class="settings-action-button" type="button" style="padding: 8px 12px; font-size: 13px;">ファイルから読込</button>
         </div>
         <ul id="cache-selected-files-list" style="list-style: none; padding: 0; margin: 0 0 10px 0; max-height: 80px; overflow-y: auto; font-size: 12px;">
